--- a/website/style.css
+++ b/website/style.css
@@ -58,8 +58,8 @@ body{
 }
 
 .ui.statistics .statistic{
-    margin-top: 35px;
-    margin-bottom: 35px;
+    margin-top: 25px;
+    margin-bottom: 25px;
     margin-left: 12px;
     margin-right: 12px;
 }
@@ -88,22 +88,46 @@ body{
     flex-basis: 30% !important;
 }
 
+.custom-grid .custom-grid-column-6{
+    display: flex;
+    flex-basis: 15% !important;
+}
+
+#goalProgress {
+    margin: 20px;
+    margin-bottom: 40px;
+}
+
 #charitiesTable{
     max-width: 1500px;
     margin-left: auto;
     margin-right: auto;
 }
 
-#labelDate {
+.subtext-label {
     color: #5a5a5a;
     margin-left: 20px;
+    margin-right: 20px;
+}
+
+#updatingRealTime .ui.loader {
+    position: relative;
+    left: 0;
+    display: inline-block;
+    margin-left: 10px;
+    top: 9px;
+}
+
+#liveUpdatingRow {
+    margin-top: 7px;
+    height: 20px;
 }
 
 :root {
   color-scheme: dark;
 }
 
-@media screen and (max-width: 1140px) {
+@media screen and (max-width: 1160px) {
     #headerName {
         display: none !important;
     }
@@ -119,7 +143,7 @@ body{
     }
 }
 
-@media screen and (max-width: 730px) {
+@media screen and (max-width: 740px) {
     #headerButtonsSmall {
         display: inline-flex !important;
     }
@@ -127,6 +151,35 @@ body{
     #headerButtonsLarge {
         display: none !important;
     }
+
+    .ui.statistics .statistic {
+        margin-top: 12px !important;
+        margin-bottom: 12px !important;
+    }
+
+    table thead {
+        display: none;
+      }
+      table td {
+        display: flex;
+      }
+      
+      table td::before {
+        content: attr(label);
+        font-weight: bold;
+        width: 120px;
+        min-width: 120px;
+        margin-right: 10px;
+        text-align: left;
+      }
+
+      #firstRow {
+          padding-top: 25px !important;
+      }
+
+      #liveUpdatingRow {
+        margin-top: 15px;
+      }
 }
 
 @media screen and (max-width: 500px) {
@@ -138,12 +191,13 @@ body{
         font-size: 3rem !important;
     }
 
-    #firstRow {
-        padding-top: 25px !important;
+    .ui.statistics.tiny .statistic .value {
+        font-size: 1.5rem !important;
     }
+}
 
-    .ui.statistics .statistic {
-        margin-top: 12px !important;
-        margin-bottom: 12px !important;
+@media screen and (max-width: 456px) {
+    #updatingRealTime {
+        display: none;
     }
 }
