--- a/website/style.css
+++ b/website/style.css
@@ -344,3 +344,7 @@
 #embedContainer .jj-thin{
     font-weight: 300;
 }
+
+#embedContainer .light-blue-background {
+    background-color: #b5d5ed ;
+}
