--- a/website/style.css
+++ b/website/style.css
@@ -49,8 +49,8 @@
 #embedContainer .ui.statistics .statistic{
     margin-top: 25px;
     margin-bottom: 25px;
-    margin-left: 12px;
-    margin-right: 12px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 #embedContainer .ui.statistics .statistic .value {
@@ -63,7 +63,7 @@
 }
 
 #embedContainer .divider {
-    margin-top: 3px;
+    margin-top: 2px;
     margin-left: 20px;
     margin-right: 20px;
     width: calc(100% - 40px);
@@ -82,11 +82,15 @@
 #embedContainer .custom-grid .custom-grid-column-3{
     display: flex;
     flex-basis: 30% !important;
+    max-width: 430px;
+    min-width: 280px;
 }
 
 #embedContainer .custom-grid .custom-grid-column-6{
     display: flex;
-    flex-basis: 15% !important;
+    flex-basis: 14% !important;
+    max-width: 220px;
+    min-width: 165px;
 }
 
 #embedContainer #goalProgress {
@@ -95,9 +99,21 @@
 }
 
 #embedContainer #charitiesTable{
-    max-width: 1500px;
+    max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
+}
+
+#embedContainer .diving-row{
+    max-width: 1650px;
+    width: 100%;
+}
+
+#embedContainer .center-row{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 #embedContainer .subtext-label {
@@ -111,12 +127,14 @@
     left: 0;
     display: inline-block;
     margin-left: 10px;
+    margin-right: 1px;
     top: 9px;
 }
 
 #embedContainer #liveUpdatingRow {
     margin-top: 7px;
     height: 20px;
+    width: 100%;
 }
 
 #embedContainer .stat-row {
@@ -197,10 +215,6 @@
     #embedContainer #firstRow {
         padding-top: 25px !important;
     }
-
-    #embedContainer #liveUpdatingRow {
-        margin-top: 15px;
-    }
     
     #embedContainer .ui.statistics.small .statistic {
         min-width: 100vw !important;
@@ -219,9 +233,19 @@
     #embedContainer .ui.statistics.tiny .statistic .value {
         font-size: 1.5rem !important;
     }
-}
 
-@media screen and (max-width: 456px) {
+    #embedContainer .stat-row {
+        height: 400px !important;
+    }
+    
+    #embedContainer .custom-grid .custom-grid-column-3{
+        min-width: 200px;
+    }
+
+    #embedContainer .custom-grid .custom-grid-column-6{
+        min-width: 125px;
+    }
+
     #embedContainer #updatingRealTime {
         display: none;
     }
