--- a/website/style.css
+++ b/website/style.css
@@ -1,21 +1,16 @@
 #embedContainer *:not(i) {
     font-family: "Montserrat";
-  }
+}
 
-  #embedContainer {
-      margin-top: 10px;
-      margin-bottom: 20px;
-      border: 0;
-      width: 100%;
-      height: 100%;
-  }
+#embedContainer {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    border: 0;
+    width: 100%;
+    height: 100%;
+}
 
-  #embedContainer #historySection {
-      display: flex;
-      justify-content: center;
-  }
-
-#embedContainer #currencySelectorObj{
+#embedContainer #currencySelectorObj {
     position: absolute;
     right: 0;
     font-weight: bold;
@@ -27,43 +22,11 @@
     background-color: #fafafa;
 }
 
-#embedContainer #loader{
+#embedContainer #loader {
     height: calc(100vh - 145px);
     box-shadow: none;
     border: 0;
     background-color: #fafafa;
-}
-
-#embedContainer .section {
-    margin: 20px;
-}
-
-#embedContainer #historySection .section {
-    max-width: 1650px;
-}
-
-#embedContainer .section-center {
-    display: flex;
-    justify-content: center;
-}
-
-#embedContainer .ui.statistics {
-    display: flex;
-    justify-content: center;
-    margin-left: 20px;
-    margin-right: 20px;
-}
-
-#embedContainer .ui.statistics .statistic{
-    margin-top: 25px;
-    margin-bottom: 25px;
-    margin-left: 15px;
-    margin-right: 15px;
-}
-
-#embedContainer .ui.statistics .statistic .value {
-    white-space: nowrap;
-    font-weight: bold;
 }
 
 #embedContainer .ui.slider .inner .track-fill {
@@ -77,67 +40,13 @@
     width: calc(100% - 40px);
 }
 
-#embedContainer .custom-grid{
-    display: flex !important;
-    flex-wrap: wrap !important;
-}
-
-#embedContainer .custom-grid .custom-grid-column-2{
-    display: flex;
-    flex-basis: 45% !important;
-}
-
-#embedContainer .custom-grid .custom-grid-column-3{
-    display: flex;
-    flex-basis: 30% !important;
-    max-width: 430px;
-    min-width: 280px;
-}
-
-#embedContainer .custom-grid .custom-grid-column-4{
-    display: flex;
-    flex-basis: 22% !important;
-    max-width: 360px;
-    min-width: 240px;
-}
-
-#embedContainer .custom-grid .custom-grid-column-6{
-    display: flex;
-    flex-basis: 14% !important;
-    max-width: 220px;
-    min-width: 165px;
-}
-
-#embedContainer #goalProgress {
-    margin: 20px;
-    margin-bottom: 40px;
-}
-
-#embedContainer #charitiesTable{
-    max-width: 600px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#embedContainer .diving-row{
-    max-width: 1650px;
-    width: 100%;
-}
-
-#embedContainer .center-row{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-
 #embedContainer .subtext-label {
     color: black;
     margin-left: 20px;
     margin-right: 20px;
 }
 
-#embedContainer #updatingRealTime .ui.loader {
+#updatingRealTime .ui.loader {
     position: relative;
     left: 0;
     display: inline-block;
@@ -152,174 +61,30 @@
     width: 100%;
 }
 
-#embedContainer .hide-live-update{
+#embedContainer .hide-live-update {
     margin-top: 20px;
 }
 
-#embedContainer .hide-live-update #liveUpdatingRow{
+#embedContainer .hide-live-update #liveUpdatingRow {
     display: none;
 }
 
 #embedContainer .stat-row {
-    margin-left: 20px;
-    margin-right: 20px;
     height: 600px;
-    width: calc(100% - 40px) !important;
-    max-width: 1300px !important;
+    width: 100%;
 }
 
 #embedContainer #dateRange {
-    margin-left: 20px;
-    margin-right: 20px;
     margin-top: 5px;
-    width: calc(100% - 40px) !important;
+    width: 100% !important;
     max-width: 1350px !important;
-}
-
-#embedContainer .slider .labels .label {
-    color: #5a5a5a !important;
-}
-
-#embedContainer .bottom-margin{
-    margin-bottom: 70px;
 }
 
 #embedContainer tbody th {
     padding: 10px !important;
 }
 
-#embedContainer .years-section {
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;
-}
-
-#embedContainer .stats-section {
-    justify-content: space-between;
-    display: flex;
-    align-items: center;
-    margin-top: 180px;
-}
-
-#embedContainer .stats-section .ui.statistics {
-    margin: 0px 100px;
-    width: 40%;
-}
-
-#embedContainer .stats-section .stats-section-text, #embedContainer #historySection p {
-    width: 100%;
-    line-height: 1.6;
-    font-size: 1.3em;
-}
-
-#embedContainer .stats-section .stats-section-text-right {
-    text-align: right;
-}
-
-#embedContainer .stats-section .stats-section-text-left {
-    text-align: left;
-}
-
-@media screen and (max-width: 1160px) {
-    #embedContainer #headerName {
-        display: none !important;
-    }
-}
-
-@media screen and (min-width: 730px) {
-    #embedContainer #headerButtonsSmall {
-        display: none !important;
-    }
-    
-    #embedContainer #headerButtonsLarge {
-        display: inline-flex !important;
-    }
-}
-
-@media screen and (max-width: 740px) {
-    #embedContainer #headerButtonsSmall {
-        display: inline-flex !important;
-    }
-    
-    #embedContainer #headerButtonsLarge {
-        display: none !important;
-    }
-
-    #embedContainer .ui.statistics .statistic {
-        margin-top: 12px !important;
-        margin-bottom: 12px !important;
-    }
-    
-    #embedContainer #charitiesTable thead {
-        display: none;
-    }
-    
-    #embedContainer #charitiesTable tbody th::before {
-        content: attr(label);
-        font-weight: bold;
-        width: 120px;
-        min-width: 120px;
-        margin-right: 10px;
-        text-align: left;
-    }
-
-    #embedContainer #charitiesTable tbody th {
-        display: flex !important;
-    }
-
-    #embedContainer #firstRow {
-        padding-top: 25px !important;
-    }
-    
-    #embedContainer .ui.statistics.small .statistic {
-        min-width: 100vw !important;
-    } 
-}
-
-@media screen and (max-width: 350px) {
-    #embedContainer #yearsTable thead {
-        display: none;
-    }
-    
-    #embedContainer #yearsTable tbody th::before {
-        content: attr(label);
-        font-weight: bold;
-        width: 120px;
-        min-width: 120px;
-        margin-right: 10px;
-        text-align: left;
-    }
-
-    #embedContainer #yearsTable tbody th {
-        display: flex !important;
-    }
-}
-
 @media screen and (max-width: 500px) {
-    #embedContainer .ui.statistics.large .statistic .value {
-        font-size: 4rem !important;
-    }
-
-    #embedContainer .ui.statistics .statistic .value {
-        font-size: 3rem !important;
-    }
-
-    #embedContainer .ui.statistics.tiny .statistic .value {
-        font-size: 1.5rem !important;
-    }
-
-    #embedContainer .stat-row {
-        height: 400px !important;
-    }
-    
-    #embedContainer .custom-grid .custom-grid-column-3{
-        min-width: 200px;
-    }
-
-    #embedContainer .custom-grid .custom-grid-column-6{
-        min-width: 125px;
-    }
-
     #embedContainer #updatingRealTime {
         display: none;
     }
@@ -383,83 +148,37 @@
     }
 }
 
-#embedContainer .color-2016 {
-    color: #46bdc6 !important;
-}
 
-#embedContainer .color-2017 {
-    color: #ab30c4 !important;
-}
-
-#embedContainer .color-2018 {
-    color: #c1bc1f !important;
-}
-
-#embedContainer .color-2019 {
-    color: #71f437 !important;
-}
-
-#embedContainer .color-2020 {
-    color: #ff0081 !important;
-}
-
-#embedContainer .color-2021 {
-    color: #6967ff !important;
-}
-
-#embedContainer .color-2022 {
-    color: #6ba950 !important;
+#embedContainer .jj-thin {
+    font-weight: 300;
 }
 
 #embedContainer .jj-pink {
     color: #e21251;
 }
 
-#embedContainer .navy {
-    color: #2e3542;
+#embedContainer .jj-pink-border-top {
+    border-top: 2px solid #e21251
 }
 
-#embedContainer .link {
-    color: #308391;
+#embedContainer .ui.cards .card .header {
+    word-break: break-word;
 }
 
-#embedContainer .light-blue {
-    color: #3584BF;
+#embedContainer .ui.cards .card .description {
+    word-break: break-word;
+    margin-top: 7px;
+    ;
 }
 
-#embedContainer .dark-blue {
-    color: #09437a;
-}
-
-#embedContainer .light-red {
-    color: #E30E50;
-}
-
-#embedContainer .dark-red {
-    color: #57051f;
-}
-
-#embedContainer .jj-thin{
-    font-weight: 300;
-}
-
-#embedContainer .light-blue-background {
-    background-color: #b5d5ed ;
-}
-
-.total-bold {
-    font-weight: 600 !important;
-    font-size: 2em !important;
-}
-
-.ui.cards .card .image {
+#embedContainer .ui.cards .card .image {
     background: white !important;
     display: flex !important;
     justify-content: center !important;
     align-items: center !important;
 }
 
-.ui.cards .card .total {
+#embedContainer .ui.cards .card .total {
     margin: 10px !important;
     margin-right: 20px !important;
     display: flex;
@@ -467,18 +186,161 @@
     align-items: center;
 }
 
-@media screen and (max-width: 500px) {
-    .ui.cards .card .total {
-        width: 100% !important;
-        margin: 20px 10px 5px 10px !important;
+#embedContainer .raised-total {
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 1.9em;
+}
+
+
+#embedContainer .raised-label {
+    text-align: center;
+    color: black;
+    font-weight: 600;
+    font-size: .9em;
+    text-transform: uppercase;
+    margin-top: 5px;
+}
+
+
+/*
+
+    NEW STYLES
+
+*/
+
+#embedContainer .guttered {
+    display: flex;
+    justify-content: center;
+    margin: 14px;
+}
+
+#embedContainer .guttered .guttered-section {
+    width: 100%;
+    max-width: 1400px;
+}
+
+#embedContainer .flexable {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
+#embedContainer .ui.segment {
+    margin: 0px !important;
+}
+
+#embedContainer .ui.segment.fit-content {
+    width: 100% !important;
+}
+
+#embedContainer .ui.segment.fit-content>.body {
+    margin-top: 30px !important;
+}
+
+#embedContainer .ui.segment.stat.full-width {
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
+}
+
+#embedContainer .ui.segment.stat {
+    min-width: 350px;
+    max-width: 350px;
+    height: 140px;
+    margin: 0px;
+}
+
+#embedContainer .ui.segment table {
+    min-width: 300px;
+    max-width: 300px;
+}
+
+#embedContainer .ui.segment>.header {
+    color: #6a6a6a;
+    word-break: break-word;
+}
+
+#embedContainer .ui.segment.centered>.header {
+    position: absolute;
+}
+
+#embedContainer .ui.segment.centered>.body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100%;
+    padding: .5em 0em;
+    margin-top: 13px;
+}
+
+#embedContainer .ui.segment.stat .value {
+    font-weight: bold;
+    font-size: 3.6em;
+}
+
+#embedContainer .ui.segment.stat .value.small {
+    font-size: 2.3em;
+}
+
+@media screen and (max-width: 1100px) {
+    #embedContainer .ui.segment.stat {
+        min-width: 295px;
+        max-width: 295px;
+    }
+
+    #embedContainer .ui.segment table {
+        min-width: 245px;
+        max-width: 245px;
     }
 }
 
-.raised-label {
-    text-align: center;
-    color: black;
-    font-size: .45em;
-    font-weight: 600;
-    text-transform:uppercase;
-    margin-top: 5px;
+@media screen and (max-width: 930px) {
+    #embedContainer .ui.segment.stat {
+        min-width: 100%;
+        max-width: 100%;
+    }
+
+    #embedContainer .ui.segment table {
+        min-width: 100%;
+        max-width: 500px;
+    }
+
+    #embedContainer #leftGrid {
+        flex: 100% !important;
+    }
+
+    #embedContainer #rightGrid {
+        flex: 100% !important;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    #embedContainer .ui.cards .card .total {
+        width: 100% !important;
+        margin: 20px 10px 5px 10px !important;
+    }
+
+    #embedContainer .ui.segment.stat .value {
+        font-weight: bold;
+        font-size: 2.7em;
+    }
+}
+
+
+#embedContainer .subtext-label {
+    position: absolute;
+    bottom: 6;
+    font-size: .87em;
+}
+
+#embedContainer .subtext-label.left {
+    left: -8;
+}
+
+#embedContainer .subtext-label.right {
+    right: -8;
 }
