--- a/website/style.css
+++ b/website/style.css
@@ -179,6 +179,7 @@
 }
 
 #embedContainer .ui.cards .card .total {
+    min-width: 135px !important;
     margin: 10px !important;
     margin-right: 20px !important;
     display: flex;
@@ -190,6 +191,8 @@
     font-weight: 600;
     text-transform: uppercase;
     font-size: 1.9em;
+    font-feature-settings: "tnum";
+    letter-spacing: -1.5px;
 }
 
 
@@ -249,7 +252,7 @@
 #embedContainer .ui.segment.stat {
     min-width: 350px;
     max-width: 350px;
-    height: 140px;
+    height: 160px;
     margin: 0px;
 }
 
@@ -280,6 +283,15 @@
 #embedContainer .ui.segment.stat .value {
     font-weight: bold;
     font-size: 3.6em;
+    font-feature-settings: 'tnum';
+}
+
+#embedContainer .ui.segment.stat .value {
+    letter-spacing: -1.5px;
+}
+
+#embedContainer .ui.segment.stat.full-width .value {
+    letter-spacing: -2.5px;
 }
 
 #embedContainer .ui.segment.stat .value.small {
@@ -302,6 +314,7 @@
     #embedContainer .ui.segment.stat {
         min-width: 100%;
         max-width: 100%;
+        height: 120px;
     }
 
     #embedContainer .ui.segment table {
@@ -328,6 +341,10 @@
         font-weight: bold;
         font-size: 2.7em;
     }
+
+    #embedContainer .ui.segment.stat.full-width .body {
+        margin-top: 8px !important;
+    }
 }
 
 
@@ -343,4 +360,8 @@
 
 #embedContainer .subtext-label.right {
     right: -8;
+}
+
+#embedContainer .comma-value {
+    margin: 0px 3px 0px 1px;
 }
