--- a/website/style.css
+++ b/website/style.css
@@ -256,7 +256,7 @@
 #embedContainer .ui.segment.stat {
     min-width: 350px;
     max-width: 350px;
-    height: 160px;
+    height: 140px;
     margin: 0px;
 }
 
@@ -310,21 +310,9 @@
 
 @media screen and (max-width: 1100px) {
     #embedContainer .ui.segment.stat {
-        min-width: 295px;
-        max-width: 295px;
-    }
-
-    #embedContainer .ui.segment table {
-        min-width: 245px;
-        max-width: 245px;
-    }
-}
-
-@media screen and (max-width: 930px) {
-    #embedContainer .ui.segment.stat {
-        min-width: 100%;
         max-width: 100%;
         height: 120px;
+        flex: 1;
     }
 
     #embedContainer .ui.segment table {
@@ -359,6 +347,10 @@
     #embedContainer .ui.cards .card .total .content {
         margin-top: 0px;
     }
+
+    #embedContainer .change-counter-div .change-counter {
+        margin-left: 230px !important;
+    }
 }
 
 
@@ -387,4 +379,91 @@
 
 #embedContainer .card .image {
     width: 100px;
+}
+
+#embedContainer .hide {
+    display: none !important;
+}
+
+#embedContainer .change-counter-div {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+
+#embedContainer .change-counter-div .change-counter {
+    display: flex;
+    justify-content: center;
+    margin-left: 370px;
+    -webkit-animation-duration: 4s;
+    animation-duration: 4s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-name: fadeOutUp;
+    animation-name: fadeOutUp;
+}
+
+#embedContainer .change-counter-div .change-counter .change-counter-text {
+    background: #00c34033;
+    padding: 2px 16px;
+    border-radius: 20px;
+    font-size: .9em;
+    width: fit-content;
+    opacity: .8;
+    font-weight: 900;
+    color: #2b9652;
+    transform: scale(.9);
+}
+
+@-webkit-keyframes fadeOutUp {
+    0% {
+        opacity: 1;
+        -webkit-transform: translateY(65px);
+    }
+
+    4% {
+        opacity: .5;
+    }
+
+    5% {
+        opacity: 1;
+        -webkit-transform: translateY(50px);
+    }
+
+    60% {
+        opacity: 1;
+        -webkit-transform: translateY(42px);
+    }
+
+    100% {
+        opacity: 0;
+        -webkit-transform: translateY(32px);
+    }
+}
+
+@keyframes fadeOutUp {
+    0% {
+        opacity: 0;
+        transform: translateY(65px);
+    }
+
+    4% {
+        opacity: .5;
+    }
+
+    5% {
+        opacity: 1;
+        transform: translateY(50px);
+    }
+
+    60% {
+        opacity: 1;
+        transform: translateY(42px);
+    }
+
+    100% {
+        opacity: 0;
+        transform: translateY(32px);
+    }
 }
