--- a/website/style.css
+++ b/website/style.css
@@ -8,6 +8,7 @@
     border: 0;
     width: 100%;
     height: 100%;
+    box-sizing: border-box;
 }
 
 #embedContainer #currencySelectorObj {
@@ -200,7 +201,7 @@
 }
 
 #embedContainer .raised-total {
-    font-weight: 600;
+    font-weight: 900;
     text-transform: uppercase;
     font-size: 1.9em;
     font-feature-settings: "tnum";
@@ -211,10 +212,27 @@
 #embedContainer .raised-label {
     text-align: center;
     color: black;
-    font-weight: 600;
+    font-weight: 900;
     font-size: .9em;
     text-transform: uppercase;
     margin-top: 5px;
+}
+
+#embedContainer .card .header-text {
+    box-sizing: border-box;
+    color: rgba(0, 0, 0, .85);
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 23.1429px;
+    margin-top: -3.856px;
+    overflow-wrap: break-word;
+    text-size-adjust: 100%;
+    unicode-bidi: isolate;
+}
+
+#embedContainer h1, #embedContainer h2, #embedContainer h3 {
+    color: rgb(106, 106, 106) !important;
 }
 
 
